# tobi-cli-ai-agent

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
agent/: executor.py  loop.py  memory.py  planner.py
core/: llm.py
tobi_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
