[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tobi-cli"
version = "0.1.0"
description = "A minimal Typer-based CLI with OpenAI-powered prompt and agent commands."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
tobi = "cli:app"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "core", "core.*"]
